--- a/app/src/main/res/layout/my_fragment.xml
+++ b/app/src/main/res/layout/my_fragment.xml
@@ -9,9 +9,9 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Castellano:"
-        android:id="@+id/castellano"
+        android:id="@+id/castellano1"
         android:layout_marginLeft="0dp"
-        android:layout_above="@+id/subtitulada"
+        android:layout_above="@+id/subtitulada1"
         android:layout_alignParentStart="true"
         android:layout_marginBottom="30dp" />
 
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Subtitulada:"
-        android:id="@+id/subtitulada"
+        android:id="@+id/subtitulada1"
         android:layout_marginLeft="0dp"
         android:layout_centerVertical="true"
         android:layout_alignParentStart="true" />
@@ -30,9 +30,9 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Castellano 3D:"
-        android:id="@+id/casteallano3d"
+        android:id="@+id/casteallano3d1"
         android:layout_marginLeft="0dp"
-        android:layout_below="@+id/subtitulada"
+        android:layout_below="@+id/subtitulada1"
         android:layout_alignParentStart="true"
         android:layout_marginTop="23dp"
         android:layout_alignParentEnd="true" />
@@ -42,8 +42,8 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Subtitulada 3D:"
-        android:id="@+id/subtitulada3d"
-        android:layout_below="@+id/casteallano3d"
+        android:id="@+id/subtitulada3d1"
+        android:layout_below="@+id/casteallano3d1"
         android:layout_alignParentStart="true"
         android:layout_marginTop="34dp"
         android:layout_alignParentEnd="true" />
