--- a/app/src/main/res/layout/movie_list_row.xml
+++ b/app/src/main/res/layout/movie_list_row.xml
@@ -14,7 +14,7 @@
     <TextView
         android:id="@+id/title"
         android:textColor="@color/title"
-        android:textSize="16dp"
+        android:textSize="16sp"
         android:textStyle="bold"
         android:layout_alignParentTop="true"
         android:layout_width="match_parent"
@@ -24,13 +24,7 @@
         android:id="@+id/genre"
         android:layout_below="@id/title"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-    <TextView
-        android:id="@+id/year"
-        android:textColor="@color/year"
-        android:layout_width="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textSize="12sp" />
 
 </RelativeLayout>
